# OptimizeMethod

./: .gitignore  CMakeLists.txt  README.md
include/: OptimizeMethod.h
src/: OptimizeMethod.cpp  assignment_1.cpp  assignment_2.cpp
